# airflow

./: Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  init-multiple-databases.sh  pyproject.toml
app/: main.py
app/data/: small_biz_data.json
app/database_creation/: base.py  db_builder.py  engine.py
dags/: small_biz_data_enrichment.py
dags/database/models/: ct_models.py
dags/database/schemas/: __init__.py  ct_business_schema.py
dags/services/small_biz_data_enrichment/: business_data_handler.py  ct_data_handler.py  entity_matcher.py
dags/utils/: sqlalchemy_to_pydantic.py
